# tasinput2

./: .gitmodules  CMakeLists.txt  Cargo.toml  README.md  appveyor.yml  azure-pipelines.yml  build.rs  remove_path_entry.ps1  where-sh.bat
.github/workflows/: build.yml  deploy.yml  main.yml
ci/: install-llvm.yml  install-qt.yml  install-rust.yml
gui/: about.cpp  about.h  ffi.cpp
include/: controller.hpp  corelib.hpp  inputs.hpp  plugin.h  tasinput2.h  tasinput2.hpp  version.h.in  version.hpp.in
lib/m64p-sys/: Cargo.toml  build.rs
lib/m64p-sys/src/: lib.rs
src/: controller.cpp  controller.rs  debug.rs  inputs.cpp  inputs.rs  lib.rs  m64compat.rs  plugin.cpp  plugin_info.rs  state.rs  tasinput2.c  tasinput2.cpp
src-old/config/: mod.rs
src-old/controller/: joystick_panel.rs  macros.rs
src-old/controller/button_panel/: mod.rs
src-old/state/: error.rs  qt_thread.rs
src/config/: exterior.rs
src/controller/: command.rs  error.rs  joystick_panel.rs  macros.rs  manager.rs  mod.rs  response.rs
src/controller/button_panel/: directional.rs  mod.rs
src/controller/manager/: gui.rs  mod.rs
src/gui/: mod.rs
src/state/: command.rs  error.rs  mod.rs  qt_thread.rs
