[package]
name = "tasinput2"
version = "1.0.1"
authors = ["not_a_seagull <jtnunley01@gmail.com>"]
edition = "2018"

[lib]
name = "tasinput2"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
array-init = "0.1.1"
lazy_static = "1.4.0"
m64p_sys = { path = "lib/m64p-sys"}
qt_widgets = "0.4.1"
thiserror = "1.0.9"