[package]
name = "tasinput2"
version = "1.0.1"
authors = ["not_a_seagull <jtnunley01@gmail.com>"]
edition = "2018"

[lib]
name = "tasinput2"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
array-init = "0.1.1"
cxx = "0.1.2"
lazy_static = "1.4.0"
m64p_sys = { path = "lib/m64p-sys"}
qt_widgets = "0.4.1"
thiserror = "1.0.9"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["std", "winuser"] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.66"
