[package]
name = "m64p-sys"
version = "0.1.0"
authors = ["not_a_seagull <notaseagull048@gmail.com>"]
edition = "2018"

[build-dependencies]
bindgen = "0.52.0"
futures = "0.3.1"
reqwest = { version = "0.10.1", features = ["json", "stream"] }
tempfile = "3.1.0"
tokio = { version = "0.2", features = ["full"] }
